fix(components): Make card footer items wrap

--- a/components/card/style.shared.scss
+++ b/components/card/style.shared.scss
@@ -43,6 +43,7 @@ tcds-card {
   > [slot="footer"],
   &::part(footer) {
     display: flex;
+    flex-wrap: wrap;
     gap: var(--tcds-space-normal);
     margin-top: auto;
   }
